# btree

./: .gitignore  .gitmodules  README.markdown  README.md  b-plus-tree.cabal  btree.cabal  default.nix  stack.yaml
bench/: Main.hs
nix/: overrides.nix
src/: ArrayList.hs  BTree.hs
src/BTree/: Array.hs  Compact.hs  Contractible.hs  ContractibleForall.hs  Generic.hs  Linear.hs  Store.hs
src/Data/Primitive/: PrimArray.hs
src/Map/Mutable/BTree/: Prim.hs
test/: Spec.hs
