name: b-plus-tree
version: 0.1.0.0
-- synopsis:
-- description:
homepage: https://github.com/andrewthad/b-plus-tree#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Map.Mutable.BTree.Prim
    Data.Primitive.PrimArray
  build-depends:
      base >= 4.7 && < 5
    , ghc-prim
    , primitive >= 0.6.2 && < 0.7
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
    , b-plus-tree
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/andrewthad/b-plus-tree
